--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: El nombre de tu sitio
+title: Noah Beal Miami
 author:
-  name: Tu nombre
-  email: tu_mail@miami.edu
+  name: Noah Beal
+  email: nsb80@miami.edu
 description: > # this means to ignore newlines until "show_excerpts:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -17,7 +17,7 @@ minima:
   # generate social links in footer
   social_links:
     twitter: jekyllrb
-    github:  jekyll
+    github:  NoahBeal
     # devto: jekyll
     # dribbble: jekyll
     # facebook: jekyll
