--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ minima:
     # flickr:   jekyll
     # instagram: jekyll
     # linkedin: jekyll
-    # pinterest: jekyll
-    # youtube: jekyll
+    # pinterest: Nbeal
+    # youtube: Miami80
     # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
     # youtube_channel_name: CloudCannon
     # telegram: jekyll
