--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author:
   name: Noah Beal
   email: nsb80@miami.edu
 description: > # this means to ignore newlines until "show_excerpts:"
-  Write an awesome description for your new site here. You can edit this
+  Hola, bienvenidos a mi página web sobre mi vida en Miami.
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
