--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author:
   name: Noah Beal
   email: nsb80@miami.edu
 description: > # this means to ignore newlines until "show_excerpts:"
-  Hola, bienvenidos a mi página web sobre mi vida en Miami.
+  Hola, bienvenidos a mi blog, que se trata de los proyectos de humanidades digitales que he estado haciendo en clase este semestre
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
